# brik-asm

./: .gitignore  Cargo.toml  README.md  std.s
.github/workflows/: rust.yml
examples/: arith.s  include.s  macro.s  mem.s  printf.s  test.s
src/: assembler.rs  encoder.rs  error.rs  fm.rs  loc.rs  macro_def.rs  main.rs  mnemonic.rs  parse.rs  reader.rs  sym.rs  util.rs
