[package]
name = "bas"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
memchr = { version = "2.7", features = ["std", "use_std"] }
anyhow = { version = "1.0", features = ["std"] }
memmap2 = { version = "=0.9.7",   default-features = false }
brik = { git = "https://github.com/rakivo/brik", rev = "83f24d7" }
libc = { version = "0.2.175", optional = true } # madvise
num-traits = "0.2.19"
crc32fast = { version = "1.5.0", features = ["std"] }
mimalloc = "0.1.47"
cfg-if = "1.0.3"

[features]
default = ["madvise", "brik-fancy-diagnostics"]

madvise = ["libc"]
brik-fancy-diagnostics = ["brik/fancy-diagnostics"]

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
overflow-checks = false

[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = 1
lto = false
codegen-units = 16
overflow-checks = false
