[package]
name = "bas"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
memchr = { version = "2.7", features = ["std", "use_std"] }
anyhow = { version = "1.0", features = ["std"] }
memmap2 = { version = "=0.9.7", default-features = false }
brik = { git = "https://github.com/rakivo/brik", rev = "83f24d7" }
num-traits = "0.2.19"
mimalloc = { version = "0.1.47", optional = true }
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
cfg-if = "1.0.3"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.175", optional = true } # madvise

[features]
default = [
    "madvise",
    "mimalloc-allocator",
    "brik-fancy-diagnostics"
]

madvise = ["libc"]
mimalloc-allocator = ["mimalloc"]
brik-fancy-diagnostics = ["brik/fancy-diagnostics"]

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
overflow-checks = false

[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = "fat"
strip = true
debug = false
overflow-checks = false

[profile.profiling]
inherits = "release"
debug = 1
lto = false
codegen-units = 16
overflow-checks = false
