[package]
name = "bas"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["std", "derive"], default-features = false }
memchr = { version = "2.7", features = ["std", "use_std"], default-features = false }
anyhow = { version = "1.0", features = ["std"], default-features = false }
memmap2 = { version = "=0.9.7", default-features = false }
brik = { git = "https://github.com/rakivo/brik", rev = "4a6639d" }
num-traits = { version = "0.2.19", default-features = false }
mimalloc = { version = "0.1.47", optional = true }
cfg-if = "1.0.3"
wyhash = { version = "0.6.0", default-features = false }
bytecount = "0.6.9"
alive-map = { git = "https://github.com/rakivo/alive-map", rev = "aea3c0c" }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.175", optional = true } # madvise

[features]
default = [
    "madvise",
    "mimalloc-allocator",
]

madvise = ["libc"]
mimalloc-allocator = ["mimalloc"]
brik-fancy-diagnostics = ["brik/fancy-diagnostics"]

[profile.release]
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
overflow-checks = false

[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = "fat"
strip = true
debug = false
overflow-checks = false

[profile.profiling]
inherits = "release"
debug = true                      # keep DWARF symbols
split-debuginfo = "packed"        # so perf can find them easily (Linux)
strip = "none"                    # don’t strip symbols
lto = false
codegen-units = 16
overflow-checks = false
panic = "abort"                   # optional: less noise, smaller code
